# polyscope-py

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  appveyor.yml  pyproject.toml  ruff.toml  run_build_and_test.sh  setup.py
.github/workflows/: build.yml  build_old.yml  build_wheels.yml  cibuildwheel_config.toml  publish.yml  test_build.yml  test_linux.yml  test_macos.yml  test_windows.yml
codegen/: gen_imgui_bindings.py  imgui-bindings.json
misc/: conditional_deploy_build.py  generate_imgui_bindings.py
scripts/: generate_imgui_enums.py
src/: polyscope_py.cpp  test.py
src/cpp/: camera_view.cpp  core.cpp  curve_network.cpp  floating_quantities.cpp  gaussian_particles.cpp  gaussian_particles_structure.cpp  gaussian_particles_structure.h  imgui.cpp  imgui_utils.h  implicit_helpers.cpp  implot.cpp  managed_buffer.cpp  point_cloud.cpp  sparse_volume_grid.cpp  surface_mesh.cpp  utils.h  volume_grid.cpp  volume_mesh.cpp
src/cpp/imgui/: imgui.cpp  imgui_api_allocators.cpp  imgui_api_child_windows.cpp  imgui_api_clipboard.cpp  imgui_api_clipping.cpp  imgui_api_color_utils.cpp  imgui_api_columns_legacy.cpp  imgui_api_context_creation.cpp  imgui_api_cursor_layout.cpp  imgui_api_data_plotting.cpp  imgui_api_debug.cpp  imgui_api_demo_debug.cpp  imgui_api_disabling.cpp  imgui_api_drag_drop.cpp  imgui_api_draw_lists.cpp  imgui_api_focus_activation.cpp  imgui_api_id_stack.cpp  imgui_api_inputs_keyboard.cpp  imgui_api_inputs_mouse.cpp  imgui_api_item_query.cpp  imgui_api_logging.cpp  imgui_api_main.cpp  imgui_api_menus.cpp  imgui_api_misc_utils.cpp  imgui_api_overlapping_items.cpp  imgui_api_parameter_stacks.cpp  imgui_api_popups.cpp  imgui_api_scrolling.cpp  imgui_api_settings.cpp  imgui_api_style_read.cpp  imgui_api_styles.cpp  imgui_api_tab_bars.cpp  imgui_api_tables.cpp  imgui_api_text_utils.cpp  imgui_api_tooltips.cpp  imgui_api_viewports.cpp  imgui_api_widgets_color.cpp  imgui_api_widgets_combo.cpp  imgui_api_widgets_drag.cpp  imgui_api_widgets_images.cpp  (+21 more)
src/polyscope/: __init__.py  camera_view.py  common.py  core.py  curve_network.py  device_interop.py  enums.py  floating_quantities.py  gaussian_particles.py  global_floating_quantity_structure.py  imgui.py  implicit_helpers.py  managed_buffer.py  point_cloud.py  sparse_volume_grid.py  structure.py  surface_mesh.py  volume_grid.py  volume_mesh.py
src/polyscope/imgui/: __init__.py
src/polyscope/implot/: __init__.py
src/polyscope/polyscope_bindings/: imgui.pyi
src/polyscope_bindings/: imgui.pyi
test/: .gitignore  imgui_demo.py  polyscope_demo.py  polyscope_test.py  ps_test.py
test/scripts/: fast_update_demo.py  gaussians_demo.py  imgui_demo.py  polyscope_demo.py
test/tests/: test_all.py  test_imgui.py  test_implot.py
